--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">学而思编程</string>
+    <string name="app_realname" translatable="false">Shizuku</string>
 
     <!-- To translators: you can leave your here -->
     <string name="translation_contributors" />
